Move SRTM to new plugin
Massive clean-up of legacy code in NASASRTMUtil.py.
Removed support of SRTM v2.1 and associated CLI parameters.

--- a/ruff.toml
+++ b/ruff.toml
@@ -90,7 +90,7 @@ lint.select = [
 ]
 target-version = "py39"
 # Ignore files not refactored yet
-exclude = ["NASASRTMUtil.py"]
+exclude = []
 
 
 # Same as black
